# YOLOv8-TensorRT

./: .gitignore
csrc/detect/end2end/: CMakeLists.txt
csrc/detect/end2end/include/: common.hpp
